Example Blueprints/ExpressRouteBlueprint/new-resource-gets/nsg.json
{
    "name": "MSIT-NSG",
    "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG",
    "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
    "type": "Microsoft.Network/networkSecurityGroups",
    "location": "westus2",
    "tags": {
      "businessowner": "",
      "compositeApp": "",
      "costCode": ""
    },
    "properties": {
      "provisioningState": "Succeeded",
      "resourceGuid": "48d40146-9c2a-4de1-93dc-7fa94c0fe843",
      "securityRules": [
        {
          "name": "Allow_Inbound_From_DB_PvtApp_In-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Allow_Inbound_From_DB_PvtApp_In-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Allow_Inbound_From_DB_PvtApp",
            "protocol": "*",
            "sourcePortRange": "*",
            "sourceAddressPrefix": "10.69.145.16/28",
            "destinationAddressPrefix": "10.69.145.16/28",
            "access": "Allow",
            "priority": 1000,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [
              "5073",
              "80",
              "443"
            ],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "Allow_Partners_TCP_Domain_Controllers_Access_Out-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Allow_Partners_TCP_Domain_Controllers_Access_Out-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Allow_Partners_Domain_Controllers_Access",
            "protocol": "TCP",
            "sourcePortRange": "*",
            "sourceAddressPrefix": "10.69.145.16/28",
            "access": "Allow",
            "priority": 1001,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [
              "53",
              "389",
              "636",
              "3268-3269",
              "88"
            ],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": [
              "10.251.174.149",
              "10.251.172.135",
              "10.251.172.136",
              "10.251.172.137",
              "10.147.63.135",
              "10.147.63.136",
              "10.147.63.151",
              "10.251.67.4",
              "10.251.67.137",
              "10.147.87.135",
              "10.147.88.134",
              "10.147.63.134",
              "10.222.185.45",
              "10.221.192.160"
            ]
          }
        },
        {
          "name": "Allow_Partners_UDP_Domain_Controllers_Access_Out-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Allow_Partners_UDP_Domain_Controllers_Access_Out-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Allow_Partners_Domain_Controllers_Access",
            "protocol": "UDP",
            "sourcePortRange": "*",
            "sourceAddressPrefix": "10.69.145.16/28",
            "access": "Allow",
            "priority": 1002,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [
              "53",
              "389",
              "636",
              "3268-3269",
              "88"
            ],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": [
              "10.251.174.149",
              "10.251.172.135",
              "10.251.172.136",
              "10.251.172.137",
              "10.147.63.135",
              "10.147.63.136",
              "10.147.63.151",
              "10.251.67.4",
              "10.251.67.137",
              "10.147.87.135",
              "10.147.88.134",
              "10.147.63.134",
              "10.222.185.45",
              "10.221.192.160"
            ]
          }
        },
        {
          "name": "Deny_Partners_TCP_Domain_Controllers_Out-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Deny_Partners_TCP_Domain_Controllers_Out-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny_Partners_Domain_Controllers",
            "protocol": "TCP",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "10.69.145.16/28",
            "access": "Deny",
            "priority": 1003,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": [
              "10.251.174.149",
              "10.251.172.135",
              "10.251.172.136",
              "10.251.172.137",
              "10.147.63.135",
              "10.147.63.136",
              "10.147.63.151",
              "10.251.67.4",
              "10.251.67.137",
              "10.147.87.135",
              "10.147.88.134",
              "10.147.63.134",
              "10.222.185.45",
              "10.221.192.160"
            ]
          }
        },
        {
          "name": "Deny_Partners_UDP_Domain_Controllers_Out-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Deny_Partners_UDP_Domain_Controllers_Out-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny_Partners_Domain_Controllers",
            "protocol": "UDP",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "10.69.145.16/28",
            "access": "Deny",
            "priority": 1004,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": [
              "10.251.174.149",
              "10.251.172.135",
              "10.251.172.136",
              "10.251.172.137",
              "10.147.63.135",
              "10.147.63.136",
              "10.147.63.151",
              "10.251.67.4",
              "10.251.67.137",
              "10.147.87.135",
              "10.147.88.134",
              "10.147.63.134",
              "10.222.185.45",
              "10.221.192.160"
            ]
          }
        },
        {
          "name": "Deny_All_TCP_Ports_In-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Deny_All_TCP_Ports_In-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny_All_TCP_Ports_IN",
            "protocol": "TCP",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "destinationAddressPrefix": "10.69.145.16/28",
            "access": "Deny",
            "priority": 2000,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [
              "10.60.0.0/16",
              "10.69.0.0/17",
              "10.104.0.0/16",
              "10.105.0.0/16",
              "10.106.0.0/16",
              "10.69.128.0/17",
              "10.249.240.0/20",
              "10.144.112.0/20",
              "10.249.112.0/20",
              "10.169.112.0/20",
              "10.169.240.0/20",
              "10.136.112.0/20",
              "10.158.240.0/20",
              "10.158.112.0/20",
              "10.128.240.0/20",
              "10.139.240.0/20",
              "10.136.184.0/21",
              "10.247.0.0/16",
              "10.251.0.0/16"
            ],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "Deny_All_TCP_Ports_legacy_EBL_Out-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Deny_All_TCP_Ports_legacy_EBL_Out-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny_All_TCP_Ports_Out_legacy_EBL",
            "protocol": "TCP",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "10.69.145.16/28",
            "access": "Deny",
            "priority": 2000,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": [
              "10.249.240.0/20",
              "10.144.112.0/20",
              "10.249.112.0/20",
              "10.169.112.0/20",
              "10.169.240.0/20",
              "10.136.112.0/20",
              "10.158.240.0/20",
              "10.158.112.0/20",
              "10.128.240.0/20",
              "10.139.240.0/20",
              "10.136.184.0/21",
              "10.247.0.0/16",
              "10.251.0.0/16"
            ]
          }
        },
        {
          "name": "Deny_All_UDP_Ports_In-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Deny_All_UDP_Ports_In-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny_All_UDP_Ports_IN",
            "protocol": "UDP",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "destinationAddressPrefix": "10.69.145.16/28",
            "access": "Deny",
            "priority": 2001,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [
              "10.60.0.0/16",
              "10.69.0.0/17",
              "10.104.0.0/16",
              "10.105.0.0/16",
              "10.106.0.0/16",
              "10.69.128.0/17",
              "10.249.240.0/20",
              "10.144.112.0/20",
              "10.249.112.0/20",
              "10.169.112.0/20",
              "10.169.240.0/20",
              "10.136.112.0/20",
              "10.158.240.0/20",
              "10.158.112.0/20",
              "10.128.240.0/20",
              "10.139.240.0/20",
              "10.136.184.0/21",
              "10.247.0.0/16",
              "10.251.0.0/16"
            ],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "Deny_All_UDP_Ports_legacy_EBL_Out-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Deny_All_UDP_Ports_legacy_EBL_Out-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny_All_UDP_Ports_Out_legacy_EBL",
            "protocol": "UDP",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "10.69.145.16/28",
            "access": "Deny",
            "priority": 2001,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": [
              "10.249.240.0/20",
              "10.144.112.0/20",
              "10.249.112.0/20",
              "10.169.112.0/20",
              "10.169.240.0/20",
              "10.136.112.0/20",
              "10.158.240.0/20",
              "10.158.112.0/20",
              "10.128.240.0/20",
              "10.139.240.0/20",
              "10.136.184.0/21",
              "10.247.0.0/16",
              "10.251.0.0/16"
            ]
          }
        },
        {
          "name": "AllowVnetOutBound-Allowed-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/AllowVnetOutBound-Allowed-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "AllowVnetOutBound-Allowed",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 4000,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "Deny_Internet_Out-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/Deny_Internet_Out-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny_Internet_Out",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "Internet",
            "access": "Deny",
            "priority": 4001,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "AllowAllOutBound-12447",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/securityRules/AllowAllOutBound-12447",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "AllowAllOutBound",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 4002,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        }
      ],
      "defaultSecurityRules": [
        {
          "name": "AllowVnetInBound",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/defaultSecurityRules/AllowVnetInBound",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Allow inbound traffic from all VMs in VNET",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 65000,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "AllowAzureLoadBalancerInBound",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/defaultSecurityRules/AllowAzureLoadBalancerInBound",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Allow inbound traffic from azure load balancer",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "AzureLoadBalancer",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 65001,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "DenyAllInBound",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/defaultSecurityRules/DenyAllInBound",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny all inbound traffic",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "*",
            "access": "Deny",
            "priority": 65500,
            "direction": "Inbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "AllowVnetOutBound",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/defaultSecurityRules/AllowVnetOutBound",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 65000,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "AllowInternetOutBound",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/defaultSecurityRules/AllowInternetOutBound",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Allow outbound traffic from all VMs to Internet",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "Internet",
            "access": "Allow",
            "priority": 65001,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        },
        {
          "name": "DenyAllOutBound",
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/networkSecurityGroups/MSIT-NSG/defaultSecurityRules/DenyAllOutBound",
          "etag": "W/\"a62f956e-424b-4b0f-8c11-9e704ae6b832\"",
          "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
          "properties": {
            "provisioningState": "Succeeded",
            "description": "Deny all outbound traffic",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "*",
            "access": "Deny",
            "priority": 65500,
            "direction": "Outbound",
            "sourcePortRanges": [],
            "destinationPortRanges": [],
            "sourceAddressPrefixes": [],
            "destinationAddressPrefixes": []
          }
        }
      ],
      "subnets": [
        {
          "id": "/subscriptions/0745e7d2-1e06-4d9e-9b9b-f42442b8b92f/resourceGroups/My-ER-TEST03/providers/Microsoft.Network/virtualNetworks/MSIT-VNET/subnets/MSIT-SUBNET"
        }
      ]
    }
  }
